Data table link align fix

--- a/src/includes/_data-table.scss
+++ b/src/includes/_data-table.scss
@@ -101,6 +101,10 @@ div.data {
                 color: var(--color-text);
             }
         }
+        // Aligned links (to inherit text direction)
+        a.align {
+            display: inline-flex !important;
+        }
         // Context menu
         & > details {
             &:last-child {
